--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=questionsService
 server.port= ${QUESTIONS_SERVICE_PORT}
 
+# Eureka client settings: point to the Eureka server
+eureka.client.service-url.defaultZone=http://localhost:${REGISTERYSERVERPORT}/eureka
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/questionsdb
 spring.datasource.username=postgres
 spring.datasource.password=mahsan
